[gd_scene load_steps=4 format=3 uid="uid://bhrua4anehx3n"]

[ext_resource type="Script" uid="uid://bi8qd2lu8xk0l" path="res://src/scenes/UI/map_menu/map_menu.gd" id="1_jdngn"]
[ext_resource type="Texture2D" uid="uid://dwk4bnpq0ke5k" path="res://assets/kiu/buttons/arrow.png" id="2_akokx"]
[ext_resource type="Texture2D" uid="uid://cjkiq0o0ny5tt" path="res://assets/kiu/buttons/btn_x.png" id="3_6bfta"]

[node name="MapMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jdngn")

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.1
anchor_right = 0.94
anchor_bottom = 0.7
offset_right = 0.32
offset_bottom = -0.32

[node name="Label" type="Label" parent="InventoryPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 20.0
text = "este es el inventario"

[node name="MapPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.1
anchor_right = 0.94
anchor_bottom = 0.7
offset_right = 0.32
offset_bottom = -0.32

[node name="Label" type="Label" parent="MapPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 20.0
text = "este es el mapa"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 0.4
anchor_bottom = 0.918
offset_left = 1.0
offset_right = -255.0
offset_bottom = -67.96
scale = Vector2(5, 5)
alignment = 1

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Control3"]
layout_mode = 0
offset_left = 56.6
offset_top = -11.8
offset_right = 72.6
offset_bottom = 4.2
scale = Vector2(2, 2)
action_mode = 0
texture_normal = ExtResource("3_6bfta")
texture_pressed = ExtResource("3_6bfta")
texture_hover = ExtResource("3_6bfta")
texture_disabled = ExtResource("3_6bfta")
texture_focused = ExtResource("3_6bfta")

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Control"]
layout_mode = 0
offset_left = -78.0
offset_top = 22.2
offset_right = -62.0
offset_bottom = 39.2
rotation = 4.71239
scale = Vector2(2, 2)
action_mode = 0
texture_normal = ExtResource("2_akokx")
texture_pressed = ExtResource("2_akokx")
texture_hover = ExtResource("2_akokx")
texture_disabled = ExtResource("2_akokx")
texture_focused = ExtResource("2_akokx")

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Control2"]
layout_mode = 0
offset_left = -5.2
offset_top = -10.0
offset_right = 10.8
offset_bottom = 7.0
rotation = 1.5708
scale = Vector2(2, 2)
action_mode = 0
texture_normal = ExtResource("2_akokx")
texture_pressed = ExtResource("2_akokx")
texture_hover = ExtResource("2_akokx")
texture_disabled = ExtResource("2_akokx")
texture_focused = ExtResource("2_akokx")

[connection signal="pressed" from="HBoxContainer/Control3/TextureButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/TextureButton" to="." method="_on_left_button_pressed"]
[connection signal="button_up" from="HBoxContainer/Control2/TextureButton" to="." method="_on_right_button_pressed"]
